--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "node-example-csanz",
   "version": "0.0.1",
   "dependencies": {
-    "express": "2.2.0"
+      "express": "2.2.0"
+    , "jade": "0.6.0"
+    , "stylus": "0.11.x"
+    , "nib": "0.0.x"
   }
 }
